--- a/.github/workflows/1-public-cluster-public-helm.yaml
+++ b/.github/workflows/1-public-cluster-public-helm.yaml
@@ -1,6 +1,8 @@
 name: Test 1 - Public Cluster Public Helm
-on: 
-  workflow_dispatch: 
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   basic-deployment:
