feat: Create workflow file to check public cluster

--- a/.github/workflows/1-public-cluster-public-helm.yaml
+++ b/.github/workflows/1-public-cluster-public-helm.yaml
@@ -23,6 +23,7 @@ jobs:
         env:
           CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
         with:
+          debug: true
           region: us-west-2
           args: |
             helm repo add bitnami https://charts.bitnami.com/bitnami
