--- a/.github/workflows/1-public-cluster-public-helm.yaml
+++ b/.github/workflows/1-public-cluster-public-helm.yaml
@@ -26,8 +26,8 @@ jobs:
         with:
           debug: true
           args: |
-            helm repo add bitnami https://charts.bitnami.com/bitnami
-            helm repo update
-            helm upgrade --install test-nginx bitnami/nginx --namespace test-basic --create-namespace
+            helm repo add bitnami https://charts.bitnami.com/bitnami;
+            helm repo update;
+            helm install bitnami/mysql --generate-name -n test-basic --create-namespace;
             kubectl get pods -n test-basic
             kubectl get svc -n test-basic
