--- a/.github/workflows/1-public-cluster-public-helm.yaml
+++ b/.github/workflows/1-public-cluster-public-helm.yaml
@@ -25,9 +25,11 @@ jobs:
           REGION_CODE: ${{ secrets.REGION_CODE }}
         with:
           debug: true
-          args: |
-            helm repo add bitnami https://charts.bitnami.com/bitnami;
-            helm repo update;
-            helm install bitnami/mysql --generate-name -n test-basic --create-namespace;
-            kubectl get pods -n test-basic
-            kubectl get svc -n test-basic
+          args:  >
+            bash -c "
+              helm repo add bitnami https://charts.bitnami.com/bitnami;
+              helm repo update;
+              helm install bitnami/mysql --generate-name -n test-basic --create-namespace;
+              kubectl get pods -n test-basic
+              kubectl get svc -n test-basic
+            "
