--- a/.github/workflows/1-public-cluster-public-helm.yaml
+++ b/.github/workflows/1-public-cluster-public-helm.yaml
@@ -28,12 +28,11 @@ jobs:
         with:
           args:  >
             bash -c "
-              helm registry login demo.goharbor.io --username $HARBOR_USERNAME --password $HARBOR_PASSWORD;
-              helm uninstall mysql-release -n test-basic
+              # helm registry login demo.goharbor.io --username $HARBOR_USERNAME --password $HARBOR_PASSWORD;
+              # helm uninstall mysql-release -n test-basic
               helm install mysql-release oci://demo.goharbor.io/devninja/mysql --version 13.0.2 -n test-basic --create-namespace;
               kubectl get pods -n test-basic;
               kubectl get svc -n test-basic;
-              kubectl delete -n test-basic --all;
             "
 
             
