--- a/.github/workflows/1-public-cluster-public-helm.yaml
+++ b/.github/workflows/1-public-cluster-public-helm.yaml
@@ -1,38 +1,33 @@
-name: Test 1 - Public Cluster Public Helm
+name: Deploy to EKS
+
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
-  basic-deployment:
+  deploy:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
-
-      - name: Deploy to EKS
-        uses: docker://dinushchathurya/eks-helm-client-test:latest 
-        env:
-          CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
-          REGION_CODE: ${{ secrets.REGION_CODE }}
-          HARBOR_USERNAME: ${{ secrets.HARBOR_USERNAME }}
-          HARBOR_PASSWORD: ${{ secrets.HARBOR_PASSWORD }}
-        with:
-          args:  >
-            bash -c "
-              # helm registry login demo.goharbor.io --username $HARBOR_USERNAME --password $HARBOR_PASSWORD;
-              # helm uninstall mysql-release -n test-basic
-              helm install mysql-release oci://demo.goharbor.io/devninja/mysql --version 13.0.2 -n test-basic --create-namespace;
-              kubectl get pods -n test-basic;
-              kubectl get svc -n test-basic;
-            "
-
-            
+    - name: Checkout code
+      uses: actions/checkout@v3
+    
+    - name: Deploy with Helm to EKS
+      uses: docker://dinushchathurya/eks-helm-client-test:latest 
+      env:
+        # AWS Credentials
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        REGION_CODE: ${{ vars.AWS_REGION }}
+        CLUSTER_NAME: ${{ vars.EKS_CLUSTER_NAME }}
+        
+        # Helm Registry Credentials
+        HARBOR_USERNAME: ${{ secrets.HARBOR_USERNAME }}
+        HARBOR_PASSWORD: ${{ secrets.HARBOR_PASSWORD }}
+      with:
+        args: |
+          helm registry login demo.goharbor.io --username $HARBOR_USERNAME --password $HARBOR_PASSWORD
+          helm uninstall mysql-release -n test-basic || true
+          helm install mysql-release oci://demo.goharbor.io/devninja/mysql --version 13.0.2 -n test-basic --create-namespace
+          kubectl get pods -n test-basic
+          kubectl get svc -n test-basic
