--- a/.github/workflows/2-public-cluster-private-helm.yaml
+++ b/.github/workflows/2-public-cluster-private-helm.yaml
@@ -1,8 +1,10 @@
-name: Test 1 - Public Cluster Private Helm
+name: Deploy to EKS
+
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+    paths:
+      - '.github/workflows/1-public-cluster-private-helm.yaml'
 
 jobs:
   basic-deployment:
