--- a/.github/workflows/2-public-cluster-private-helm.yaml
+++ b/.github/workflows/2-public-cluster-private-helm.yaml
@@ -28,13 +28,13 @@ jobs:
           HARBOR_USERNAME: ${{ secrets.HARBOR_USERNAME }}
           HARBOR_PASSWORD: ${{ secrets.HARBOR_PASSWORD }}
         with:
-          args:  >
-            bash -c "
-              helm registry login demo.goharbor.io --username $HARBOR_USERNAME --password $HARBOR_PASSWORD;
-              helm uninstall mysql-release -n test-basic
-              helm install mysql-release oci://demo.goharbor.io/devninja/mysql --version 13.0.2 -n test-basic --create-namespace;
-              kubectl get pods -n test-basic;
-              kubectl get svc -n test-basic;
-            "
+          args: | 
+            helm repo add bitnami https://charts.bitnami.com/bitnami
+            helm repo update
+            helm install bitnami/mysql --generate-name -n test-basic-public --create-namespace
+            kubectl get pods -n test-basic-public
+            kubectl get svc -n test-basic-public
+            kubectl delete -n test-basic-public --all || true
+
 
             
