--- a/.github/workflows/1-public-cluster-public-helm.yaml
+++ b/.github/workflows/1-public-cluster-public-helm.yaml
@@ -30,10 +30,11 @@ jobs:
         HARBOR_PASSWORD: ${{ secrets.HARBOR_PASSWORD }}
       with:
         args: |
-          helm registry login demo.goharbor.io --username $HARBOR_USERNAME --password $HARBOR_PASSWORD
-          helm uninstall mysql-release -n test-basic || true
-          helm install mysql-release oci://demo.goharbor.io/devninja/mysql --version 13.0.2 -n test-basic --create-namespace
-          kubectl get pods -n test-basic
-          kubectl get svc -n test-basic
-          kubectl delete -n test-basic --all || true
+          helm repo add bitnami https://charts.bitnami.com/bitnami
+          helm repo update
+          helm install bitnami/mysql --generate-name -n test-basic-public --create-namespace
+          kubectl get pods -n test-basic-public
+          kubectl get svc -n test-basic-public
+          kubectl delete -n test-basic-public --all || true
+         
 
